--- a/src/styles/StudentNavbar.css
+++ b/src/styles/StudentNavbar.css
@@ -41,11 +41,30 @@
 }
 
 .logout-link {
-  color: #ffb3b3;
+  color:blue;
+  font-weight: 900;
+  background-color:rgb(204, 218, 226);
+  padding:0.3rem;
+  border-radius: 5px;
 }
+.logout-btn {
+  background-color: #e63946;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: auto;
+  font-weight: bold;
+}
+.logout-btn:hover {
+  background-color: #c62828;
+}
+
 
 .logout-link:hover {
   color: #fff;
+ 
 }
 
 /* Responsive styling */
